# alp

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
front/: .env  .graphqlrc.yml  Dockerfile  Dockerfile.dev  README.md  codegen.yml  graphql.schema.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vars.ts
front/app/: index.graphql  layout.tsx  page.tsx  template.tsx
front/app/create-user/: page.tsx
front/app/me/: page.tsx
front/app/signin/: index.module.css  page.tsx
front/cache/: index.ts
front/components/ChatView/: index.tsx  messages.ts  useMessages.ts
front/components/Header/: index.tsx
front/components/Header/WorkspaceSelector/: index.module.css  index.tsx
front/components/MeView/: index.graphql  index.tsx
front/components/RoomList/: index.graphql  index.tsx
front/components/WorkspaceDetail/: index.graphql  index.tsx
front/context/: apollo.tsx  auth.tsx  index.graphql  statusManage.tsx
front/gql/: gql.ts  graphql.ts
front/hooks/: index.graphql  postMessage.ts  subscribeUsersInWorkspace.ts
front/pages/: _app.tsx  index.graphql  index.tsx  me.tsx  signin.tsx
front/utils/: apollo.ts  firebase.ts
migrations/2021-09-11-174124_create_messages/: up.sql
migrations/2021-09-15-155845_create_user_rooms/: down.sql
migrations/2021-09-19-163943_invitation/: down.sql
migrations/2021-09-20-090945_user_screen_name/: down.sql  up.sql
server/: Cargo.toml  Dockerfile  Dockerfile.dev
server/migrations/2021-09-05-153207_create_users/: up.sql
server/migrations/2021-09-15-143835_create_rooms/: down.sql  up.sql
server/migrations/2021-09-15-155845_create_user_rooms/: up.sql
server/migrations/2021-09-16-121009_create_workspaces/: down.sql  up.sql
server/migrations/2021-09-16-185731_workspace_room_relation/: down.sql  up.sql
server/migrations/2021-09-19-163943_invitation/: up.sql
server/src/: auth.rs  dataloader.rs  lib.rs  main.rs
server/src/db/: mod.rs  schema.rs
server/src/domain/: mod.rs
server/src/repository/: insert.rs  mod.rs  query.rs
server/src/schema/: mod.rs  mutation.rs  query.rs  subscription.rs
server/src/schema/objects/: message.rs  mod.rs  role.rs  room.rs  workspace_user.rs
server/src/usecases/: pagenation.rs
src/: auth.rs  lib.rs  main.rs  paging.rs  schema.rs  subscribe.rs
src/db/: schema.rs
src/domain/: mod.rs
src/infra/: mod.rs
src/repository/: insert.rs  mod.rs  query.rs
src/schema/: mod.rs  mutation.rs  objects.rs  query.rs  subscription.rs
src/schema/objects/: invitation.rs  message.rs  mod.rs  room.rs  user.rs  workspace.rs  workspace_user.rs
src/usecases/: mod.rs
