[package]
name = "alp"
version = "0.1.0"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.9"
async-graphql-actix-web = "2.9"
actix-web = { version = "3.0.0", features=["rustls"] }
actix-rt = "1.1.0"
actix-web-actors = "3.0.0"

slab = "0.4.2"
futures = "0.3.0"
once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"

actix-cors = "0.5.4"

serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"

jsonwebtoken = "7"
